# social

./: Cargo.toml  README.md  schema.sql
crates/social-serve/: Cargo.toml
crates/social-serve/src/: lib.rs  main.rs
crates/social-store/: Cargo.toml
crates/social-store/src/: lib.rs
