[package]
name = "social-serve"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.7.7"
serde = { version = "1.0.210", features = ["derive"] }
social-store = { path = "../social-store" }
tokio = { version = "1.40.0", features = ["full"] }
